<resources>
    <string name="app_name">明阳风电EAM</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_please_login">尚未登录</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exit_text">再按一次退出程序</string>
    <string name="can_not_find_version_name">获取失败</string>
    <string name="please_userid">请输入用户名</string>
    <string name="please_password">请输入密码</string>
    <string name="remenber_pass">记住密码</string>
    <string name="login">登录</string>
    <string name="login_loging">登录中...</string>
    <string name="logout">注销</string>
    <string name="logined_member_username">logined_member_username</string>
    <string name="logined_member_password">logined_member_password</string>
    <string name="logined_member_ischeck">logined_member_ischeck</string>
    <string name="logined_user_isoffline">logined_user_isoffline</string>
    <string name="login_error_empty_user">用户名不能为空</string>
    <string name="login_error_empty_passwd">密码不能为空</string>
    <string name="login_insertOrg">login_insertOrg</string>
    <string name="login_insertSite">login_insertSite</string>
    <string name="login_personId">login_personId</string>
    <string name="login_userName">login_userName</string>
    <string name="login_displayName">login_displayName</string>
    <string name="login_department">login_department</string>
    <string name="ip_address">ip_address</string>
    <string name="help">帮助</string>
    <string name="string_help_text">当前应用缺少必要权限。请点击“设置”-“权限”打开所需权限。最后点击两次后退按钮，即可返回。</string>
    <string name="quit">退出</string>
    <string name="settings">设置</string>
    <string name="error_title">错误</string>
    <string name="error_obtain_once">无法获取ONCE</string>
    <string name="error_network_exception">网络通信异常，请稍后重试</string>
    <string name="error_network_disconnect">网络不可达,请开启Wifi或者移动数据网络</string>
    <string name="error_reply">提交失败</string>
    <string name="error_create_topic">无法创建新话题</string>
    <string name="error_login">无法登录</string>
    <string name="error_fav_nodes">收藏节点错误</string>
    <string name="error_fav_topic">收藏话题错误</string>
    <string name="error_get_profile">无法获取用户个人资料</string>
    <string name="error_unknown">未知错误</string>
    <string name="load">正在加载</string>
    <string name="load1">暂无数据</string>
    <string name="title_activity_load">loading界面</string>
    <string name="title_activity_login">登录界面</string>
    <string name="title_activity_main">主界面</string>
    <string name="work_list_title">工单列表</string>
    <string name="work_detail_title">工单详情</string>
    <string name="work_plan_title">工单计划</string>
    <string name="title_activity_workwoactivity">工单任务</string>
    <string name="title_activity_woactivitydetails">任务详情</string>
    <string name="title_activity_wpmaterial">工单物料</string>
    <string name="title_activity_wpmaterialdetails">物料详情</string>
    <string name="title_activity_uddebugworkorderlinelist">调试工单子表列表</string>
    <string name="title_activity_uddebugworkorderlinedetails">调试工单子表详情</string>
    <string name="title_activity_option">选项列表</string>
    <string name="title_activity_imageupload">附件选取</string>
    <string name="item_num_title">编号:</string>
    <string name="item_desc_title">描述:</string>
    <string name="hint_item_num_title">暂无编号</string>
    <string name="hint_item_desc_title">暂无描述</string>
    <string name="login_successful_hint">登陆成功</string>
    <string name="get_data_info_fail">获取信息失败</string>
    <string name="have_not_data_txt">暂无相关数据</string>
    <string name="have_not_data">暂无数据</string>
    <string name="loading">正在加载中...</string>
    <string name="work_delete">删除</string>
    <string name="work_cancel">取消</string>
    <string name="work_save">保存</string>
    <string name="work_confirm">确定</string>
    <string name="fresh">刷新</string>
    <string name="start">启动中…</string>
    <string name="approve">审批提交中…</string>
    <string name="status_1">新建</string>
    <string name="status_2">待审批</string>
    <string name="status_3">已提交</string>
    <string name="status_4">已关闭</string>
    <string name="status_all">所有</string>
    <string name="title_activity_wfm"> 流程审批</string>
    <string name="wfm_app_title">流程审批名:</string>
    <string name="wfm_ownertable_title">表名:</string>
    <string name="wfm_assigncode_title">任务分配人:</string>
    <string name="wfm_udassign02_title">流程发起人:</string>
    <string name="wfm_duedate_title">到期日期:</string>
    <string name="wfm_processname_title">过程名称:</string>
    <string name="wfm_roleid_title">任务角色:</string>
    <string name="wfm_startdate_title">流程发起日期:</string>
    <string name="wfm_details_text">查看表单详情</string>
    <string name="wfm_approve_text">审批</string>
    <string name="wfm_detail_title">流程审批详情</string>
    <string name="desc_text">描述:</string>
    <string name="udrro_text">项目台账</string>
    <string name="udprorunlog_text">项目日报</string>
    <string name="udfeedback_text">问题联络单</string>
    <string name="udacceptance_text">阶段验收单</string>
    <string name="work_aa">终验收工单</string>
    <string name="work_dc">调试工单</string>
    <string name="work_fr">故障工单</string>
    <string name="work_sp">排查工单</string>
    <string name="work_tp">技改工单</string>
    <string name="work_ws">定检工单</string>
    <string name="work_wonum">工单号:</string>
    <string name="work_description">工单描述:</string>
    <string name="work_list_search">搜索</string>
    <string name="work_describe">描述:</string>
    <string name="work_branch">中心:</string>
    <string name="work_udprojectnum">项目编号:</string>
    <string name="work_udprojectdesc">项目描述:</string>
    <string name="work_udlocnum">机位号:</string>
    <string name="work_udlocation">设备位置:</string>
    <string name="work_locdesc">位置描述:</string>
    <string name="work_lead">运行组/维护组工程师:</string>
    <string name="work_lead1">定检组长:</string>
    <string name="work_lead2">终验收负责人:</string>
    <string name="work_lead3">项目负责人:</string>
    <string name="work_lead4">技改负责人:</string>
    <string name="work_failurecode">故障类:</string>
    <string name="work_problemcode">故障问题:</string>
    <string name="work_gzwtdesc">故障问题描述:</string>
    <string name="work_culevel">故障等级:</string>
    <string name="work_udrprrsb">提报人:</string>
    <string name="work_udzglimit">提报时间:</string>
    <string name="work_udplannum">终验收计划号:</string>
    <string name="work_udreportnum">故障提报单号:</string>
    <string name="work_udprores">项目负责人:</string>
    <string name="work_schedstart">计划开始时间:</string>
    <string name="work_schedfinish">计划完成时间:</string>
    <string name="work_actstart">实际开始时间:</string>
    <string name="work_actfinish">实际完成时间:</string>
    <string name="work_isstoped">是否停机:</string>
    <string name="work_pmchgevalstart">故障开始时间:</string>
    <string name="work_pmchgevalend">故障恢复时间:</string>
    <string name="work_udjgresult">累计停机时间:</string>
    <string name="work_udremark2">没有编码的物料:</string>
    <string name="work_udprobdesc">故障隐患描述:</string>
    <string name="work_udcond2">需要其他单据:</string>
    <string name="work_worktype">工单类型:</string>
    <string name="work_status">状态:</string>
    <string name="work_createdate">创建时间:</string>
    <string name="work_createby">创建人:</string>
    <string name="work_udjpnum">定检标准编号:</string>
    <string name="work_udjpnum2">排查标准:</string>
    <string name="work_udjpnum3">技改标准:</string>
    <string name="work_udplstartdate">计划开始时间:</string>
    <string name="work_udplstopdate">计划完成时间:</string>
    <string name="work_udrlstartdate">实际开始时间:</string>
    <string name="work_udrlstopdate">实际完成时间:</string>
    <string name="work_udinspoby">定检人员:</string>
    <string name="work_udinspoby2">定检人员:</string>
    <string name="work_udinspoby3">定检人员:</string>
    <string name="work_udinspoby4">定检人员:</string>
    <string name="work_udinspoby5">定检人员:</string>
    <string name="work_udinspoby6">定检人员:</string>
    <string name="work_udwptype">人员类型</string>
    <string name="work_udwp">承包人员</string>
    <string name="work_lead5">维护/运行组长:</string>
    <string name="work_udinspoby_2">维护/运行人员:</string>
    <string name="work_djplannum">定检计划编号:</string>
    <string name="work_djtype">定检类型:</string>
    <string name="work_pccompnum1">计划定检风机台数:</string>
    <string name="work_wtcode">风机型号:</string>
    <string name="work_udcond1">需要其他单据:</string>
    <string name="work_assettype">设备类别:</string>
    <string name="work_perinspr">定检结果:</string>
    <string name="work_perinspr2">排查结果:</string>
    <string name="work_perinspr3">技改结果:</string>
    <string name="work_udremark">备注:</string>
    <string name="work_isbigpar">大部件发放:</string>
    <string name="work_udzgmeasure">故障处理方案:</string>
    <string name="work_plannum">排查计划编号:</string>
    <string name="work_pccompnum">计划完成台数:</string>
    <string name="work_realcomp">实际完成台数:</string>
    <string name="work_pccompnum2">风机台数</string>
    <string name="work_pctype">排查类型</string>
    <string name="work_udfjfol">风机跟踪</string>
    <string name="work_pcreson">排查原因</string>
    <string name="work_pcreson2">技改原因</string>
    <string name="work_udjgresult1">排查结果</string>
    <string name="work_jgplannum">技改计划编号</string>
    <string name="work_udjgtype">技改类型</string>
    <string name="work_udfjappnum">主控程序版本号</string>
    <string name="work_udrprrsb1">负责人</string>
    <string name="work_plan">工作计划</string>
    <string name="work_woactivity">任务</string>
    <string name="work_taskid">任务号:</string>
    <string name="woactivity_description">描述:</string>
    <string name="woactivity_wojo1">系统/项目:</string>
    <string name="woactivity_wojo2">子系统/子项目:</string>
    <string name="woactivity_wojo3">检查/检修方法:</string>
    <string name="woactivity_wojo4">kks编码:</string>
    <string name="woactivity_udsaftydesc">安全缺失(隐患)描述:</string>
    <string name="woactivity_udzgstu">整改情况回复:</string>
    <string name="woactivity_udzgstu1">检修情况:</string>
    <string name="woactivity_udinsunit">排查部位:</string>
    <string name="woactivity_udrprrsb">整改责任人:</string>
    <string name="woactivity_allpower">人员数量:</string>
    <string name="woactivity_alloptime">耗时(小时):</string>
    <string name="woactivity_invcontent">定检规格:</string>
    <string name="woactivity_invcontent1">技改完成情况:</string>
    <string name="woactivity_udrlstopdate">完成时间:</string>
    <string name="woactivity_schedstart">计划开始时间:</string>
    <string name="woactivity_schedfinish">计划完成时间:</string>
    <string name="woactivity_estdur">估计持续时间:</string>
    <string name="woactivity_owner">负责人:</string>
    <string name="woactivity_actstart">实际开始时间:</string>
    <string name="woactivity_actfinish">实际完成时间:</string>
    <string name="woactivity_udstarttime">开始时间:</string>
    <string name="woactivity_udendtime">结束时间:</string>
    <string name="woactivity_udacstarttime">计划开始时间:</string>
    <string name="woactivity_udacstoptime">计划完成时间:</string>
    <string name="woactivity_udacstarttime2">实际开始时间:</string>
    <string name="woactivity_udacstoptime2">实际完成时间:</string>
    <string name="woactivity_udzyscorn">工作任务:</string>
    <string name="woactivity_udzysbasic">执行标准:</string>
    <string name="woactivity_perinspr1">已完成?:</string>
    <string name="woactivity_perinspr2">排查结果:</string>
    <string name="woactivity_perinspr3">定检结果:</string>
    <string name="pronum_text">项目编号:</string>
    <string name="branch_text">所属中心:</string>
    <string name="prostage_1_text">项目阶段:</string>
    <string name="prodesc_text">项目描述:</string>
    <string name="prores_text">项目负责人:</string>
    <string name="phone1_text">负责人电话:</string>
    <string name="xmxx_text">项目信息</string>
    <string name="createdate_1_text">创建时间:</string>
    <string name="jptask_text">任务:</string>
    <string name="result2_text">结果:</string>
    <string name="lrxx_text">录入信息</string>
    <string name="driverid_text">创建人:</string>
    <string name="comisorno_text">是否提交:</string>
    <string name="createby_name_text">创建人名称:</string>
</resources>