<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp"
    android:layout_marginTop="2dp"
    android:background="#fff"

    android:foreground="?android:selectableItemBackground"
    android:orientation="horizontal"
    card_view:cardCornerRadius="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="5dp"
            android:padding="5dp">

            <TextView
                android:id="@+id/jptask_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jptask_text"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/jptask_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/jptask_id"
                android:hint="@string/hint_item_num_title"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/desc_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/jptask_id"
                android:layout_marginTop="5dp"
                android:text="@string/item_desc_title"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/item_desc_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/jptask_id"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/desc_id"
                android:ellipsize="end"
                android:ems="14"
                android:hint="@string/hint_item_desc_title"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/result2_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/desc_id"
                android:layout_marginTop="5dp"
                android:text="@string/result2_text"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/result2_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/desc_id"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/result2_id"
                android:ellipsize="end"
                android:ems="14"
                android:hint="@string/hint_item_desc_title"
                android:singleLine="true"
                android:textColor="#de000000"
                android:textSize="16sp" />


        </RelativeLayout>


    </RelativeLayout>

</android.support.v7.widget.CardView>