<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/corners_bg"
    android:layout_height="match_parent">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/corners_bg"
        >


    <TableRow  android:layout_marginTop="@dimen/dimens_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/work_fr_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"

            android:orientation="vertical">


            <TextView
                android:id="@+id/work_text_fault_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:drawablePadding="@dimen/dimen_5"
                android:drawableTop="@mipmap/ic_fr"
                android:padding="20sp"
                android:text="@string/work_fr"></TextView>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/work_aa_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/work_text_prevent_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:drawablePadding="@dimen/dimen_5"
                android:drawableTop="@mipmap/ic_aa"
                android:padding="20sp"
                android:text="@string/work_aa"></TextView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/work_dc_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/work_text_status_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:drawablePadding="@dimen/dimen_5"
                android:drawableTop="@mipmap/ic_dc"
                android:padding="20sp"
                android:text="@string/work_dc"></TextView>

        </LinearLayout>
    </TableRow>

    <TableRow  android:layout_marginTop="@dimen/dimens_10"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/work_sp_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/work_text_project_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:drawableTop="@mipmap/ic_sp"
                android:padding="20sp"
                android:text="@string/work_sp"></TextView>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/work_tp_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/work_text_service_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="20dp"
                android:drawableTop="@mipmap/ic_tp"

                android:text="@string/work_tp"></TextView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/work_ws_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/work_text_accident_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="20dp"
                android:drawableTop="@mipmap/ic_ws"
                android:text="@string/work_ws"></TextView>

        </LinearLayout>
    </TableRow>
    </TableLayout>
</LinearLayout>