<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_udfeedback2_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40dp"
        android:background="@color/light_gray2"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dimens_10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/xmxx_text"
            android:textColor="@color/light_black"
            android:textSize="@dimen/dimens_16dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/dimens_5">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_40dp"
            android:layout_marginLeft="@dimen/dimen_5"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/pronum_text"
                android:textColor="@color/light_black"
                android:textSize="@dimen/dimens_16dp" />

            <TextView
                android:id="@+id/pronum_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_5"
                android:hint="@string/have_not_data"
                android:textColor="@color/light_black"
                android:textSize="@dimen/dimens_16dp" />
        </LinearLayout>

        <View
            android:id="@+id/view_1_id"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/num_linearlayout_id"
            android:background="@mipmap/line"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_40dp"
            android:layout_marginLeft="@dimen/dimen_5"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/prodesc_text"
                android:textColor="@color/light_black"
                android:textSize="@dimen/dimens_16dp" />

            <TextView
                android:id="@+id/prodesc_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_5"
                android:hint="@string/have_not_data"
                android:textColor="@color/light_black"
                android:textSize="@dimen/dimens_16dp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@mipmap/line"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_40dp"
            android:layout_marginLeft="@dimen/dimen_5"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/prores_text"
                android:textColor="@color/light_black"
                android:textSize="@dimen/dimens_16dp" />

            <TextView
                android:id="@+id/prores_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_5"
                android:layout_toRightOf="@+id/item_num_title"
                android:hint="@string/have_not_data"
                android:textColor="@color/light_black"
                android:textSize="@dimen/dimens_16dp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@mipmap/line"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_40dp"
            android:layout_marginLeft="@dimen/dimen_5"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/phone1_text"
                android:textColor="@color/light_black"
                android:textSize="@dimen/dimens_16dp" />

            <TextView
                android:id="@+id/phone1_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_5"
                android:hint="@string/have_not_data"
                android:textColor="@color/light_black"
                android:textSize="@dimen/dimens_16dp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@mipmap/line"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_40dp"
            android:layout_marginLeft="@dimen/dimen_5"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/branch_text"
                android:textColor="@color/light_black"
                android:textSize="@dimen/dimens_16dp" />

            <TextView
                android:id="@+id/branch_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_5"
                android:hint="@string/have_not_data"
                android:textColor="@color/light_black"
                android:textSize="@dimen/dimens_16dp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@mipmap/line"></View>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_40dp"
            android:layout_marginLeft="@dimen/dimen_5"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/prostage_1_text"
                android:textColor="@color/light_black"
                android:textSize="@dimen/dimens_16dp" />

            <TextView
                android:id="@+id/prostage_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_5"
                android:hint="@string/have_not_data"
                android:textColor="@color/light_black"
                android:textSize="@dimen/dimens_16dp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@mipmap/line"></View>


    </LinearLayout>


</LinearLayout>
